--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </style>
 </head>
 <body>
-    <a href="/gallery.html">Go to gallery</a><br>
-    <a href="/periodic table.html">Go to periodic table</a>
+    <a href="./gallery.html">Go to gallery</a><br>
+    <a href="./periodic table.html">Go to periodic table</a>
 
       <table border="3" cellpadding="7" cellspacing="4" width="50%" >
     
