--- a/periodic table.html
+++ b/periodic table.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/index.html">GO BACK</a>
+    <a href="./index.html">GO BACK</a>
 </body>
 </html>
