--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <a href="./gallery.html">Go to gallery</a><br>
-    <a href="./periodic-table.html">Go to periodic table</a>
+    <a href="./periodic-table.html">Go to periodic-table</a>
 
       <table border="3" cellpadding="7" cellspacing="4" width="50%" >
     
